--- a/game.libretro.mrboom/addon.xml.in
+++ b/game.libretro.mrboom/addon.xml.in
@@ -17,8 +17,17 @@
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en">Mr.Boom (Bomberman) v3.1</summary>
-		<description></description>
+		<description>Mr.Boom is a freeware 8 players Bomberman clone.
+
+Supports up to 8 players and features like pushing bombs, remote controls and kangaroo riding...</description>
 		<license></license>
 		<platform>@PLATFORM@</platform>
+		<assets>
+			<icon>resources/icon.png</icon>
+			<fanart>resources/fanart.jpg</fanart>
+			<screenshot>resources/screenshot-01.jpg</screenshot>
+			<screenshot>resources/screenshot-02.jpg</screenshot>
+			<screenshot>resources/screenshot-03.jpg</screenshot>
+		</assets>
 	</extension>
 </addon>
