--- a/depends/common/mrboom/CMakeLists.txt
+++ b/depends/common/mrboom/CMakeLists.txt
@@ -15,10 +15,7 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
   set(LIBRETRO_DEBUG DEBUG=1)
 endif()
 
-if(CORE_SYSTEM_NAME STREQUAL windows)
-  find_package(MinGW REQUIRED)
-  set(BUILD_COMMAND ${MINGW_MAKE} -j$ENV{NUMBER_OF_PROCESSORS} -C . -f Makefile platform=win  ${LIBRETRO_DEBUG} GIT_VERSION=)
-elseif(CORE_SYSTEM_NAME STREQUAL linux)
+if(CORE_SYSTEM_NAME STREQUAL linux)
   set(BUILD_COMMAND $(MAKE) -C . -f Makefile  platform=unix ${LIBRETRO_DEBUG} GIT_VERSION=)
 elseif(CORE_SYSTEM_NAME STREQUAL osx)
   set(BUILD_COMMAND $(MAKE) -C . -f Makefile  platform=osx ${LIBRETRO_DEBUG} GIT_VERSION=)
