FIX: include cpack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ set(MRBOOM_CUSTOM_BINARY ${MRBOOM_LIB}
     ${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
 
 build_addon(${PROJECT_NAME} MRBOOM "")
+
+include(CPack)
