Updated by kodi-game-scripting
https://github.com/fetzerch/kodi-game-scripting/

--- a/game.libretro.mrboom/addon.xml.in
+++ b/game.libretro.mrboom/addon.xml.in
@@ -21,6 +21,7 @@
 Supports up to 8 players and features like pushing bombs, remote controls and kangaroo riding...</description>
 		<license></license>
 		<platform>@PLATFORM@</platform>
+		<source>https://github.com/kodi-game/game.libretro.mrboom</source>
 		<assets>
 			<icon>resources/icon.png</icon>
 			<fanart>resources/fanart.jpg</fanart>
