--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: wsnipex <wsnipex@a1.net>
 Build-Depends: debhelper (>= 9.0.0),
                cmake,
                kodi-addon-dev,
-               mrboom (>= 4.7.0.107)
+               libretro-mrboom (>= 4.7.0) | mrboom (>= 4.7.0)
 Standards-Version: 3.9.8
 Section: libs
 
