Updated by kodi-game-scripting
https://github.com/kodi-game/kodi-game-scripting/

--- a/game.libretro.mrboom/addon.xml.in
+++ b/game.libretro.mrboom/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="game.libretro.mrboom"
 		name="Mr.Boom (Bomberman)"
-		version="5.2.0.146"
+		version="5.2.0.147"
 		provider-name="Remdy">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
@@ -26,7 +26,7 @@
 			<screenshot>resources/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshot-03.jpg</screenshot>
 		</assets>
-		<summary lang="en_GB">Mr.Boom (Bomberman) 5.2</summary>
+		<summary lang="en_GB">Mr.Boom (Bomberman)</summary>
 		<description lang="da_DK">Mr.Boom er en freeware 8-spiller Bomberman klon. Den har bomber, fjernbetjeninger, kænguru-ridning og meget mere.</description>
 		<description lang="de_DE">Mr.Boom ist ein kostenloser Bomberman-Klon für 8 Spieler. Es bietet das Werfen von Bomben, Fernbedienungen, Känguru-Reiten und mehr.</description>
 		<description lang="en_GB">Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more.</description>
